feat: add offer sign check

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -161,6 +161,7 @@
     "offers": "My offers",
 
     "wallet": "Wallet",
+    "documents": "Documents",
 
     "top_up": "Top up wallet",
     "withdraw": "Withdraw money",
