--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -162,6 +162,7 @@
     "offers": "Мои заказы",
 
     "wallet": "Кошелёк",
+    "documents": "Документы",
 
     "top_up": "Пополнение кошелька",
     "withdraw": "Вывести деньги",
