--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -162,6 +162,7 @@
     "offers": "Mening buyurtmalarim",
 
     "wallet": "Hamyon",
+    "documents": "Dokumentlar",
 
     "top_up": "Hamyonni to'ldirish",
     "withdraw": "Pul yechib olish",
