feat: start admin rework

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2328,7 +2328,8 @@
       "transactions": "Transactions",
       "moderation": "Moderation",
       "complaints": "Complaints",
-      "reviews": "Reviews"
+      "reviews": "Reviews",
+      "invoice": "Invoices and contracts"
     },
 
     "pages": {
