--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -2327,7 +2327,8 @@
       "transactions": "Tranzaksiyalar",
       "moderation": "Moderatsiya",
       "complaints": "Shikoyatlar",
-      "reviews": "Sharhlar"
+      "reviews": "Sharhlar",
+      "invoice": "Hisob-fakturalar va shartnomalar"
     },
 
     "pages": {
