feat: new admin sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2329,7 +2329,8 @@
       "moderation": "Moderation",
       "complaints": "Complaints",
       "reviews": "Reviews",
-      "invoice": "Invoices and contracts"
+      "invoice": "Invoices and contracts",
+      "organization": "Organization"
     },
 
     "pages": {
