--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -2328,7 +2328,8 @@
       "moderation": "Moderatsiya",
       "complaints": "Shikoyatlar",
       "reviews": "Sharhlar",
-      "invoice": "Hisob-fakturalar va shartnomalar"
+      "invoice": "Hisob-fakturalar va shartnomalar",
+      "organization": "Organizatsiya"
     },
 
     "pages": {
