--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3003,6 +3003,58 @@
           "ok": "Хорошо"
         }
       }
+    },
+
+    "documents": {
+      "title": "Документы",
+      "description": "Список документов для просмотра и подписания в системе Didox.",
+
+      "tabs": {
+        "category": {
+          "title": "Направление",
+          "type": {
+            "inbox": "Входящие",
+            "outbox": "Исходящие",
+            "draft": "Черновики"
+          }
+        },
+
+        "type": {
+          "title": "Тип документа",
+          "type": {
+            "all": "Все",
+            "custom_document": "Произовльный документ",
+            "invoice_pharm": "Счет-фактура (ФАРМ)"
+          }
+        },
+
+        "signature": {
+          "title": "Статус подписи",
+          "type": {
+            "all": "Все",
+            "signed": "Подписан",
+            "signed_party": "Ожидает вашей подписи",
+            "signed_self": "Ожидает подписи партера"
+          }
+        }
+      },
+
+      "card": {
+        "contract": {
+          "label": "Номер и дата договора"
+        },
+        "updated": "Дата обновления",
+        "counterparty": {
+          "title": "Контрагент",
+          "inn": "ИНН"
+        },
+        "price": {
+          "title": "Стоимость",
+          "delivery": "Стоимость поставки",
+          "vat": "Сумма НДС",
+          "withVat": "Стоимость с НДС"
+        }
+      }
     }
   },
 
