--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1213,7 +1213,7 @@
 
     "offer_sign": {
       "title": "Подписать оферту",
-      "description": "Для начала работы с сервисом необходимо ознакомиться и принять условия публичной оферты",
+      "description": "Для начала работы с сервисом необходимо ознакомиться и принять условия <1>публичной оферты</1>",
       "requirements": [
         { "item": "Ознакомление с условиями использования" },
         { "item": "Согласие с политикой конфиденциальности" },
