--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3024,7 +3024,9 @@
           "type": {
             "all": "Все",
             "custom_document": "Произовльный документ",
-            "invoice_pharm": "Счет-фактура (ФАРМ)"
+            "invoice_pharm": "Счет-фактура (ФАРМ)",
+            "invoice": "Счет-фактура",
+            "work_act": "Акт выполненых работ"
           }
         },
 
