--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1771,7 +1771,11 @@
 
       "success": {
         "title": "Ваш заявка успешна обработана!",
-        "text": "Пожалуйста, внимательно указывайте назначение платежа и реквизиты в точном соответствии с данными в счёте на оплату. Это необходимо для корректного и быстрого зачисления средств. После поступления средств на указанный расчетный счет, ваш баланс будет пополнен."
+        "text": "Пожалуйста, внимательно указывайте назначение платежа и реквизиты в точном соответствии с данными в счёте на оплату. Это необходимо для корректного и быстрого зачисления средств. После поступления средств на указанный расчетный счет, ваш баланс будет пополнен.",
+
+        "buttons": {
+          "download": "Скачать"
+        }
       }
     },
     "withdraw": {
