--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1212,7 +1212,7 @@
     },
 
     "offer_sign": {
-      "title": "Подписать оферту",
+      "title": "Подтверждение организации",
       "description": "Для начала работы с сервисом необходимо ознакомиться и принять условия <1>публичной оферты</1>",
       "requirements": [
         { "item": "Ознакомление с условиями использования" },
@@ -2494,9 +2494,14 @@
       }
     },
     "organization": {
-      "accept": {
+      "create": {
         "success": "Организация успешно отправлена на модерацию",
         "error": "При добавлении организации произошла ошибка"
+      },
+      "offer_sign": {
+        "success": "Публичная оферта успешно подписана",
+        "need": "Необходимо подтвердить организацию подписав публичную оферту",
+        "error": "При подписании публичной оферты произошла ошибка"
       }
     },
 
