--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1224,6 +1224,15 @@
         "section": "Перейдите в раздел",
         "organization_data": "Данные организации"
       },
+
+      "authorization_success": {
+        "title": "Авторизация успешна",
+        "subtitle": "ЭЦП активна и готова к использованию",
+        "description": "Вы можете подписать документ используя вашу электронную цифровую подпись",
+        "status": "Статус:",
+        "active": "Организация подтверждена"
+      },
+
       "legal_notice": "Юридически обязывающий документ",
       "buttons": {
         "sign": "Подписать"
